test/classes/deitz/types/type_constructor_error3.good
type_constructor_error3.chpl:6: error: illegal assignment of type to value
