test/classes/deitz/types/type_constructor_error3.chpl
class C {
  type t;
  var x: t;
}

var c = unmanaged C(int);
writeln(c);
